Migración a Maven y JavaFX con nueva interfaz, controladores y excepciones